# Vitis-AI

board_setup/vck190/2024.1/: libtarget-factory-4.0.0-1.aarch64.rpm  libunilog-4.0.0-1.aarch64.rpm
dpucvdx8g-trd/vitis_prj/scripts/: xvdpu_aie_noc.py
examples/vai_optimizer/pytorch/cifar10/: 0_setup_env.sh
examples/vai_optimizer/pytorch/cifar10_ddp/: 0_setup_env.sh  analyse.py  analyse.py.bak  common.py  common.py.bak  compare.py  compare.py.bak  data.py  data.py.bak  evaluate.py  evaluate.py.bak  net.py  net.py.bak  prune.py  prune.py.bak  search.py  search.py.bak  slim_model_train_ddp.py  slim_model_train_ddp.py.bak  sparse_model_train_ddp.py  sparse_model_train_ddp.py.bak  train_ddp.py  utils.py  (+2 more)
examples/vai_runtime/adas_detection/: adas_detection
examples/vai_runtime/resnet50_pt/: resnet50_pt
examples/vai_runtime/segmentation/: segmentation
examples/vai_runtime/video_analysis/: video_analysis
src/vai_library/: CMakeLists.txt  README.md  build_all.sh  cmake.sh  update_licence.sh
src/vai_library/3Dsegmentation/: CMakeLists.txt
src/vai_library/bevdet/: CMakeLists.txt
src/vai_library/bosch_fcnsemseg/: CMakeLists.txt
src/vai_library/bosch_ssdobjdet/: CMakeLists.txt
src/vai_library/bts/: CMakeLists.txt
src/vai_library/c2d2_lite/: CMakeLists.txt
src/vai_library/carplaterecog/: CMakeLists.txt
src/vai_library/centernet/: CMakeLists.txt
src/vai_library/centerpoint/: CMakeLists.txt
src/vai_library/classification/: CMakeLists.txt
src/vai_library/clocs/: CMakeLists.txt
src/vai_library/cpu_task/: CMakeLists.txt
src/vai_library/cvart/: CMakeLists.txt
src/vai_library/dpu_task/: CMakeLists.txt
src/vai_library/efficientdet_d2/: CMakeLists.txt
src/vai_library/facedetect/: CMakeLists.txt
src/vai_library/facedetectrecog/: CMakeLists.txt
src/vai_library/facefeature/: CMakeLists.txt
src/vai_library/facelandmark/: CMakeLists.txt
src/vai_library/facequality5pt/: CMakeLists.txt
src/vai_library/general1/: CMakeLists.txt
src/vai_library/graph_runner/: CMakeLists.txt
src/vai_library/math/: CMakeLists.txt
src/vai_library/overview/: CMakeLists.txt
src/vai_library/overview/demo/: CMakeLists.txt
src/vai_library/overview/demo/Custom_OP_Demo/pytorch_example/: run.sh
src/vai_library/overview/demo/Custom_OP_Demo/pytorch_example/op_registration/op_PPScatter/: my_PPScatter_op.cpp
src/vai_library/overview/demo/Custom_OP_Demo/pytorch_example/pointpillars_graph_runner/: build.sh  readme
src/vai_library/overview/demo/Custom_OP_Demo/tensorflow2_example/: run.sh
src/vai_library/overview/demo/Custom_OP_Demo/tensorflow2_example/op_Mylayer/: Makefile
src/vai_library/overview/demo/Custom_OP_Demo/tensorflow2_example/tf2_custom_op_graph_runner/: readme  tf2_custom_op_graph_runner.cpp
src/vai_library/overview/samples_onnx/: CMakeLists.txt
src/vai_library/overview/samples_onnx/3DSegmentation/: 3DSegmentation_onnx.hpp  readme  test_3DSegmentation_onnx.cpp  test_accuracy_3DSegmentation_onnx.cpp  test_performance_3DSegmentation_onnx.cpp
src/vai_library/overview/samples_onnx/bevdet/: bevdet_onnx.hpp  getbatch.hpp  process_result.hpp  readme  test_accuracy_bevdet_onnx.cpp  test_bevdet_onnx.cpp  test_performance_bevdet_onnx.cpp  utils.hpp
src/vai_library/overview/samples_onnx/face_quality/: face_quality_onnx.hpp  readme  test_accuracy_face_quality_onnx.cpp  test_face_quality_onnx.cpp  test_performance_face_quality_onnx.cpp
src/vai_library/overview/samples_onnx/facemaskdet/: facemaskdet_onnx.hpp  readme  test_accuracy_facemaskdet_onnx.cpp  test_facemaskdet_onnx.cpp  test_performance_facemaskdet_onnx.cpp
src/vai_library/overview/samples_onnx/multitaskv3/: multitaskv3_onnx.hpp  prior_boxes.hpp  readme  ssd_detector.hpp  test_accuracy_multitaskv3_onnx.cpp  test_multitaskv3_onnx.cpp  test_performance_multitaskv3_onnx.cpp  util.hpp
src/vai_library/overview/samples_onnx/ofa_yolo/: build.sh  ofa_yolo_onnx.hpp  readme  test_accuracy_ofa_yolo_onnx.cpp  test_ofa_yolo_onnx.cpp  test_performance_ofa_yolo_onnx.cpp
src/vai_library/overview/samples_onnx/reid/: readme  reid_onnx.hpp  test_accuracy_reid_onnx.cpp  test_performance_reid_onnx.cpp  test_reid_onnx.cpp
src/vai_library/overview/samples_onnx/segmentation/: readme  segmentation_onnx.hpp  test_accuracy_segmentation_onnx.cpp  test_performance_segmentation_onnx.cpp  test_segmentation_onnx.cpp
src/vai_library/overview/samples_onnx/sesrs/: build.sh  readme  sesrs_onnx.hpp  test_accuracy_sesrs_onnx.cpp  test_performance_sesrs_onnx.cpp  test_sesrs_onnx.cpp
src/vai_library/overview/samples_onnx/textmountain/: build.sh  readme  test_accuracy_textmountain_onnx.cpp  test_performance_textmountain_onnx.cpp  test_textmountain_onnx.cpp  textmountain_onnx.hpp
src/vai_library/overview/samples_onnx/unet2d/: readme  test_accuracy_unet2d_onnx.cpp  test_performance_unet2d_onnx.cpp  test_unet2d_onnx.cpp  unet2d_onnx.hpp
src/vai_library/overview/samples_onnx/yolov5/: readme  test_accuracy_yolov5_onnx.cpp  test_performance_yolov5_onnx.cpp  test_yolov5_onnx.cpp  yolov5_onnx.hpp
src/vai_library/overview/samples_onnx/yolov8/: build.sh  readme  test_accuracy_yolov8_onnx.cpp  test_performance_yolov8_onnx.cpp  test_yolov8_onnx.cpp  yolov8_onnx.hpp
src/vai_library/x_autonomous3d/: CMakeLists.txt
src/vai_library/xmodel_image/: CMakeLists.txt
src/vai_library/xnnpp/: CMakeLists.txt
src/vai_library/yolov4/: CMakeLists.txt
src/vai_library/yolov5/: CMakeLists.txt
src/vai_runtime/target_factory/: CMakeLists.txt
src/vai_runtime/unilog/: CMakeLists.txt
src/vai_runtime/vart/: CMakeLists.txt  cmake.sh
src/vai_runtime/vart/dpu-runner/test/: CMakeLists.txt  mr_runner.cpp  mr_runner.cpp.bak  test_buffer.cpp  test_buffer.cpp.bak  test_buffer_double.cpp  test_buffer_double.cpp.bak  test_buffer_double_gaochong.cpp  test_buffer_double_gaochong.cpp.bak  test_buffer_read_reg.cpp  test_buffer_read_reg.cpp.bak  test_buffer_release.cpp  test_buffer_release.cpp.bak  test_buffer_sysreset.cpp  test_buffer_sysreset.cpp.bak  test_dpu_runner.cpp  test_dpu_runner_mindray.cpp  xvdpu_profiler.cpp
src/vai_runtime/xir/: CMakeLists.txt
(+990 files in other folders)
